style fixing #2 - gap & flex

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -119,7 +119,7 @@ header:hover #languageSwitch {
 
 #contentContainer {
   margin-inline: 12%;
-  padding: 2rem;
+  padding: 2rem 0;
   font-weight: bold;
 
   display: flex;
@@ -141,6 +141,10 @@ header:hover #languageSwitch {
   }
   #languageSwitch {
     margin-right: 1rem;
+  }
+  .contentCard {
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
   }
 }
 
